[package]
name = "clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sniffer-rs = "1.1.2"
tigris-rs = { path = "/home/lighttigerxiv/projects/whiskers-apps/tigris-rs", features = [
    "extension",
] }
