[package]
name = "clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sniffer-rs = "1.1.2"
tigris-core = { path = "/home/lighttigerxiv/dev/whiskers-apps/pc/tigris-core/", features = [
    "extension",
] }
